--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,11 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
+                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
+                <li><a href="mariage.html">Mariage</a></li>
+                <li><a href="evenement.html">Événement</a></li>
+                <li><a href="shooting-pub.html">Shooting Pub</a></li>
+                <li><a href="shooting-personnel.html">Shooting Personnel</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +29,7 @@
         <section class="contact">
             <h2>Contactez-nous</h2>
             <p>Envoyez-nous un message pour discuter de votre projet photo.</p>
-            <form action="https://formspree.io/f/xrbyoeyz" method="POST">
+            <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form"> <!-- Ajouté classe pour styling -->
                 <input type="text" name="nom" placeholder="Votre nom" required>
                 <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required>
                 <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required>
@@ -65,7 +70,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+        <p>© 2025 L'Objectif de Gabriel. Designed by Anna Guiffard. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
