Remove unused links and update footer text

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
                 <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
-                <li><a href="mariage.html">Mariage</a></li>
-                <li><a href="evenement.html">Événement</a></li>
-                <li><a href="shooting-pub.html">Shooting Pub</a></li>
-                <li><a href="shooting-personnel.html">Shooting Personnel</a></li>
             </ul>
         </nav>
     </header>
@@ -68,7 +64,7 @@
     </main>
 
     <footer>
-        <p>© 2025 L'Objectif de Gabriel. soutenue by Anna Guiffard. Tous droits réservés.</p> <!-- Centré et corrigé -->
+        <p>© 2025 L'Objectif de Gabriel. Designed by Anna Guiffard. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
