Remove unused navigation links and tidy up form

--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,6 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
                 <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
-                <li><a href="mariage.html">Mariage</a></li>
-                <li><a href="evenement.html">Événement</a></li>
-                <li><a href="shooting-pub.html">Shooting Pub</a></li>
-                <li><a href="shooting-personnel.html">Shooting Personnel</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +25,7 @@
         <section class="contact">
             <h2>Contactez-nous</h2>
             <p>Envoyez-nous un message pour discuter de votre projet photo.</p>
-            <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form"> <!-- Ajouté classe pour styling -->
+            <form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form">
                 <input type="text" name="nom" placeholder="Votre nom" required>
                 <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required>
                 <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required>
