--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,11 @@
                 
                 <label>Notez votre intérêt pour nos services (étoiles) :</label>
                 <div class="star-rating">
-                    <input type="radio" id="star1" name="note" value="1" /><label for="star1" title="1 étoile">☆</label>
-                    <input type="radio" id="star2" name="note" value="2" /><label for="star2" title="2 étoiles">☆</label>
-                    <input type="radio" id="star3" name="note" value="3" /><label for="star3" title="3 étoiles">☆</label>
-                    <input type="radio" id="star4" name="note" value="4" /><label for="star4" title="4 étoiles">☆</label>
-                    <input type="radio" id="star5" name="note" value="5" /><label for="star5" title="5 étoiles">☆</label>
+                    <input type="radio" id="star1" name="note" value="1" /><label for="star1" title="1 étoile">⭐</label>
+                    <input type="radio" id="star2" name="note" value="2" /><label for="star2" title="2 étoiles">⭐</label>
+                    <input type="radio" id="star3" name="note" value="3" /><label for="star3" title="3 étoiles">⭐</label>
+                    <input type="radio" id="star4" name="note" value="4" /><label for="star4" title="4 étoiles">⭐</label>
+                    <input type="radio" id="star5" name="note" value="5" /><label for="star5" title="5 étoiles">⭐</label>
                 </div>
                 
                 <div class="progress-container">
