Update footer text for sponsorship acknowledgment

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p>© 2025 L'Objectif de Gabriel. Designed by Anna Guiffard. Tous droits réservés.</p>
+        <p>© 2025 L'Objectif de Gabriel. Soutenue part Anna Guiffard. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
