--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
+                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +32,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+        <p>&copy; 2025 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
