--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     </main>
 
     <footer>
-        <p>© 2025 L'Objectif de Gabriel. soutenue part Anna Guiffard. Tous droits réservés.</p>
+        <p>© 2025 L'Objectif de Gabriel. Designed by Anna Guiffard. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
