--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes Clichés Favoris - L'Objectif de Gabriel</title>
+    <title>À Propos - L'Objectif de Gabriel</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -16,123 +16,23 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
-                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li> <!-- Nouveau lien -->
+                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="hero">
-            <h2>Mes Clichés Favoris</h2>
-            <p>Une sélection de mes photos préférées, mélange de tous les styles.</p>
-        </section>
-
-        <section class="galerie">
-            <h2>Galerie Générale</h2>
-            <div class="corkboard">
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale1.jpg" alt="Cliché favori 1">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale2.jpg" alt="Cliché favori 2">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale3.jpg" alt="Cliché favori 3">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale4.jpg" alt="Cliché favori 4">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale5.jpg" alt="Cliché favori 5">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale6.jpg" alt="Cliché favori 6">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale7.jpg" alt="Cliché favori 7">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale8.jpg" alt="Cliché favori 8">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale9.jpg" alt="Cliché favori 9">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale10.jpg" alt="Cliché favori 10">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale11.jpg" alt="Cliché favori 11">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale12.jpg" alt="Cliché favori 12">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale13.jpg" alt="Cliché favori 13">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale14.jpg" alt="Cliché favori 14">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/generale/generale15.jpg" alt="Cliché favori 15">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <!-- Polaroid final grand et visible (solo) -->
-                <div class="polaroid large-empty">
-                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
-                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
-                    <div class="pin"></div>
-                </div>
-            </div>
-            <!-- Bouton devis supprimé -->
+        <section class="about">
+            <h2>À Propos de Nous</h2>
+            <p>Photographe basé dans le 44, je suis passionné par l'art de figer l'instant pour en faire un souvenir impérissable. Mon objectif ? Saisir la magie des moments qui comptent, qu'il s'agisse de la complicité étincelante d'un mariage, de l'énergie unique d'un événement ou de la personnalité qui se dégage lors d'un portrait.</p>
+            <p>Je crois que les plus belles photos sont celles où l'on oublie l'appareil. Mon approche est donc à la fois bienveillante et discrète, mêlant conseils avisés et capture spontanée des rires, des regards et des émotions pures. Guidé par une lumière naturelle que je chéris et un équipement professionnel, je m'engage à transformer vos précieux souvenirs en véritables œuvres d'art, authentiques et intemporelles.</p>
+            <p>Fort de plusieurs années d'expérience, je me déplace dans toute la France pour immortaliser votre histoire. N'hésitez pas à me contacter pour en discuter autour d'un café.</p>
+            <img src="images/gabriel.jpg" alt="Portrait de Gabriel, photographe professionnel en action" class="about-img">
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+        <p>&copy; 2025 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
