--- a/index.html
+++ b/index.html
@@ -1,131 +1,116 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Formulaire styles de photo</title>
-<style>
-  body {
-    background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
-    font-family: Arial, sans-serif;
-    color: white;
-    padding: 30px;
-  }
-  .form-container {
-    max-width: 400px;
-    margin: auto;
-    background: rgba(255 255 255 / 0.1);
-    padding: 20px;
-    border-radius: 10px;
-  }
-  h2 {
-    margin-bottom: 20px;
-    font-weight: normal;
-  }
-  .checkbox-group {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: flex-start;
-  }
-  .checkbox-item {
-    background: rgba(255 255 255 / 0.15);
-    backdrop-filter: blur(5px);
-    border: 1px solid rgba(255 255 255 / 0.3);
-    border-radius: 5px;
-    width: 160px; /* même largeur pour tous */
-    height: 80px; /* même hauteur pour tous */
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 12px;
-    padding: 10px 15px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.15);
-    cursor: pointer;
-    user-select: none;
-  }
-  .checkbox-item input[type="checkbox"] {
-    transform: scale(1.3);
-    margin: 0;
-  }
-  .checkbox-label-text {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    line-height: 1.2;
-  }
-  /* Pour centrer emoji et texte verticalement */
-  .emoji {
-    font-size: 1.6em;
-    margin-bottom: 4px;
-    line-height: 1;
-  }
-  textarea {
-    width: 100%;
-    height: 100px;
-    margin-top: 20px;
-    border-radius: 5px;
-    border: 1px solid rgba(255 255 255 / 0.3);
-    background: rgba(255 255 255 / 0.1);
-    color: white;
-    padding: 10px;
-    font-family: monospace, monospace;
-    resize: vertical;
-    box-shadow: inset 0 0 5px rgba(255 255 255 / 0.2);
-  }
-  textarea::placeholder {
-    color: rgba(255 255 255 / 0.7);
-  }
-  /* Pour faciliter le click sur la bulle tout entière */
-  .checkbox-item input[type="checkbox"] {
-    cursor: pointer;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil - L'Objectif de Gabriel</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="form-container">
-    <h2>Sélectionnez les styles de photo qui vous intéressent :</h2>
-    <form>
-      <div class="checkbox-group">
-        <label class="checkbox-item">
-          <input type="checkbox" name="style" value="shooting-pub" />
-          <span class="checkbox-label-text">
-            <span class="emoji">📸</span>
-            Shooting<br/>Pub
-          </span>
-        </label>
-        <label class="checkbox-item">
-          <input type="checkbox" name="style" value="shooting-evenement" />
-          <span class="checkbox-label-text">
-            <span class="emoji">🎉</span>
-            Shooting<br/>Événement
-          </span>
-        </label>
-        <label class="checkbox-item">
-          <input type="checkbox" name="style" value="shooting-personnel" />
-          <span class="checkbox-label-text">
-            <span class="emoji">🧑‍💼</span>
-            Shooting<br/>Personnel
-          </span>
-        </label>
-        <label class="checkbox-item">
-          <input type="checkbox" name="style" value="mariage" />
-          <span class="checkbox-label-text">
-            <span class="emoji">🏠</span>
-            Mariage
-          </span>
-        </label>
-        <label class="checkbox-item">
-          <input type="checkbox" name="style" value="evenement" />
-          <span class="checkbox-label-text">
-            <span class="emoji">🎊</span>
-            Événement
-          </span>
-        </label>
-      </div>
+    <header>
+        <nav>
+            <h1>L'Objectif de Gabriel</h1>
+            <ul>
+                <li><a href="index.html" class="active">Accueil</a></li>
+                <li><a href="about.html">À Propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="rdv.html">Prendre RDV</a></li>
+            </ul>
+        </nav>
+    </header>
 
-      <textarea placeholder="Dites-nous plus sur votre projet (budget, date approximative, idées spécifiques)..."></textarea>
-    </form>
-  </div>
+    <main>
+        <!-- Section Héro -->
+        <section class="hero">
+            <h2>Immortalisez vos moments uniques 📸</h2>
+            <p>Photographe professionnel spécialisé en portraits, mariages, événements et shootings publicitaires.</p>
+            <a href="rdv.html" class="btn">Réserver une séance</a>
+        </section>
+
+        <!-- Présentation -->
+        <section class="about">
+            <h2>Bienvenue chez L'Objectif de Gabriel</h2>
+            <p>
+                Passionné par la lumière, les émotions et l'instant parfait, Gabriel capture vos souvenirs les plus précieux avec authenticité et style. 
+                Que ce soit pour un mariage, une campagne publicitaire ou un shooting personnel, chaque cliché est une œuvre d’art pensée pour vous.
+            </p>
+            <img src="images/about-photo.jpg" alt="Gabriel photographe professionnel" class="about-img">
+        </section>
+
+        <!-- Services -->
+        <section class="services">
+            <h2>Mes Services</h2>
+            <p>Découvrez les prestations proposées pour tous vos besoins photo.</p>
+
+            <div class="services-grid">
+                <a href="mariage.html" class="service-btn">
+                    <div class="service-icon">💍</div>
+                    <h3>Mariage</h3>
+                    <p>Des souvenirs éternels de votre journée unique.</p>
+                </a>
+                <a href="evenement.html" class="service-btn">
+                    <div class="service-icon">🎉</div>
+                    <h3>Événements</h3>
+                    <p>Conférences, galas ou concerts, chaque instant compte.</p>
+                </a>
+                <a href="shooting-personnel.html" class="service-btn">
+                    <div class="service-icon">🧍‍♀️</div>
+                    <h3>Shooting Personnel</h3>
+                    <p>Exprimez votre style et votre personnalité devant l’objectif.</p>
+                </a>
+                <a href="shooting-pub.html" class="service-btn">
+                    <div class="service-icon">📢</div>
+                    <h3>Shooting Publicitaire</h3>
+                    <p>Des visuels professionnels qui font briller votre marque.</p>
+                </a>
+            </div>
+        </section>
+
+        <!-- Galerie Aperçu -->
+        <section class="galerie">
+            <h2>Aperçu de Mes Réalisations</h2>
+            <div class="corkboard">
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/galerie/photo1.jpg" alt="Mariage en extérieur">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/galerie/photo2.jpg" alt="Portrait artistique">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/galerie/photo3.jpg" alt="Événement musical">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid large-empty">
+                    <div class="empty-text">
+                        Bientôt vos photos ici – Réservez votre séance dès maintenant !
+                    </div>
+                    <a href="contact.html" class="btn small">Me Contacter</a>
+                    <div class="pin"></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Appel à l'action -->
+        <section class="cta-section">
+            <h2>Envie de créer des souvenirs inoubliables ?</h2>
+            <p>Contactez-moi pour donner vie à vos idées et projets photo.</p>
+            <a href="rdv.html" class="btn">Prendre Rendez-vous</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 L'Objectif de Gabriel. Tous droits réservés.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
