--- a/index.html
+++ b/index.html
@@ -21,94 +21,31 @@
     </header>
 
     <main>
-        <!-- Section Héro -->
+        <!-- Section d’accueil -->
         <section class="hero">
-            <h2>Immortalisez vos moments uniques 📸</h2>
-            <p>Photographe professionnel spécialisé en portraits, mariages, événements et shootings publicitaires.</p>
-            <a href="rdv.html" class="btn">Réserver une séance</a>
+            <h2>Bienvenue chez L’Objectif de Gabriel</h2>
+            <p>Capturez vos plus beaux moments avec passion et authenticité.</p>
         </section>
 
-        <!-- Présentation -->
-        <section class="about">
-            <h2>Bienvenue chez L'Objectif de Gabriel</h2>
-            <p>
-                Passionné par la lumière, les émotions et l'instant parfait, Gabriel capture vos souvenirs les plus précieux avec authenticité et style. 
-                Que ce soit pour un mariage, une campagne publicitaire ou un shooting personnel, chaque cliché est une œuvre d’art pensée pour vous.
-            </p>
-            <img src="images/about-photo.jpg" alt="Gabriel photographe professionnel" class="about-img">
-        </section>
-
-        <!-- Services -->
+        <!-- Section services -->
         <section class="services">
             <h2>Mes Services</h2>
-            <p>Découvrez les prestations proposées pour tous vos besoins photo.</p>
-
-            <div class="services-grid">
-                <a href="mariage.html" class="service-btn">
-                    <div class="service-icon">💍</div>
-                    <h3>Mariage</h3>
-                    <p>Des souvenirs éternels de votre journée unique.</p>
-                </a>
-                <a href="evenement.html" class="service-btn">
-                    <div class="service-icon">🎉</div>
-                    <h3>Événements</h3>
-                    <p>Conférences, galas ou concerts, chaque instant compte.</p>
-                </a>
-                <a href="shooting-personnel.html" class="service-btn">
-                    <div class="service-icon">🧍‍♀️</div>
-                    <h3>Shooting Personnel</h3>
-                    <p>Exprimez votre style et votre personnalité devant l’objectif.</p>
-                </a>
-                <a href="shooting-pub.html" class="service-btn">
-                    <div class="service-icon">📢</div>
-                    <h3>Shooting Publicitaire</h3>
-                    <p>Des visuels professionnels qui font briller votre marque.</p>
-                </a>
+            <div class="services-container">
+                <a href="mariage.html" class="btn">Mariages</a>
+                <a href="evenement.html" class="btn">Événements</a>
+                <a href="shooting-personnel.html" class="btn">Shooting Personnel</a>
+                <a href="shooting-pub.html" class="btn">Shooting Publicitaire</a>
             </div>
-        </section>
 
-        <!-- Galerie Aperçu -->
-        <section class="galerie">
-            <h2>Aperçu de Mes Réalisations</h2>
-            <div class="corkboard">
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/galerie/photo1.jpg" alt="Mariage en extérieur">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/galerie/photo2.jpg" alt="Portrait artistique">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/galerie/photo3.jpg" alt="Événement musical">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid large-empty">
-                    <div class="empty-text">
-                        Bientôt vos photos ici – Réservez votre séance dès maintenant !
-                    </div>
-                    <a href="contact.html" class="btn small">Me Contacter</a>
-                    <div class="pin"></div>
-                </div>
+            <!-- Bouton "Réserver une séance photo" déplacé ici -->
+            <div class="cta-center">
+                <a href="rdv.html" class="btn primary">Réserver une séance photo</a>
             </div>
-        </section>
-
-        <!-- Appel à l'action -->
-        <section class="cta-section">
-            <h2>Envie de créer des souvenirs inoubliables ?</h2>
-            <p>Contactez-moi pour donner vie à vos idées et projets photo.</p>
-            <a href="rdv.html" class="btn">Prendre Rendez-vous</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 L'Objectif de Gabriel. Tous droits réservés.</p>
+        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
