--- a/index.html
+++ b/index.html
@@ -21,26 +21,45 @@
     </header>
 
     <main>
-        <!-- Section d’accueil -->
+        <!-- Section d'accueil principale -->
         <section class="hero">
             <h2>Bienvenue chez L’Objectif de Gabriel</h2>
-            <p>Capturez vos plus beaux moments avec passion et authenticité.</p>
+            <p>Photographe passionné, je capture vos moments uniques avec émotion et authenticité.</p>
+            <a href="rdv.html" class="btn">Réserver une séance photo</a>
         </section>
 
-        <!-- Section services -->
+        <!-- Section services principaux -->
         <section class="services">
             <h2>Mes Services</h2>
-            <div class="services-container">
-                <a href="mariage.html" class="btn">Mariages</a>
-                <a href="evenement.html" class="btn">Événements</a>
-                <a href="shooting-personnel.html" class="btn">Shooting Personnel</a>
-                <a href="shooting-pub.html" class="btn">Shooting Publicitaire</a>
+            <p>Découvrez mes prestations adaptées à vos besoins.</p>
+            <div class="services-grid">
+                <a href="mariage.html" class="service-btn">
+                    <div class="service-icon">💍</div>
+                    <h3>Mariage</h3>
+                    <p>Immortalisez le plus beau jour de votre vie.</p>
+                </a>
+                <a href="evenement.html" class="service-btn">
+                    <div class="service-icon">🎉</div>
+                    <h3>Événementiel</h3>
+                    <p>Captures authentiques de vos moments festifs.</p>
+                </a>
+                <a href="shooting-personnel.html" class="service-btn">
+                    <div class="service-icon">📸</div>
+                    <h3>Shooting Personnel</h3>
+                    <p>Des portraits qui reflètent votre personnalité.</p>
+                </a>
+                <a href="shooting-pub.html" class="service-btn">
+                    <div class="service-icon">💼</div>
+                    <h3>Shooting Publicitaire</h3>
+                    <p>Images impactantes pour vos projets professionnels.</p>
+                </a>
             </div>
+        </section>
 
-            <!-- Bouton "Réserver une séance photo" déplacé ici -->
-            <div class="cta-center">
-                <a href="rdv.html" class="btn primary">Réserver une séance photo</a>
-            </div>
+        <!-- Section appel à l'action -->
+        <section class="cta-section">
+            <h2>Envie de réserver votre séance photo ?</h2>
+            <a href="rdv.html" class="btn">Prendre Rendez-vous</a>
         </section>
     </main>
 
