--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <section class="hero">
             <h2>Bienvenue chez L’Objectif de Gabriel</h2>
             <p>Photographe passionné, je capture vos moments uniques avec émotion et authenticité.</p>
-            <a href="rdv.html" class="btn">Réserver une séance photo</a>
         </section>
 
         <!-- Section services principaux -->
         <section class="services">
             <h2>Mes Services</h2>
             <p>Découvrez mes prestations adaptées à vos besoins.</p>
+            
             <div class="services-grid">
                 <a href="mariage.html" class="service-btn">
                     <div class="service-icon">💍</div>
@@ -54,12 +54,11 @@
                     <p>Images impactantes pour vos projets professionnels.</p>
                 </a>
             </div>
-        </section>
 
-        <!-- Section appel à l'action -->
-        <section class="cta-section">
-            <h2>Envie de réserver votre séance photo ?</h2>
-            <a href="rdv.html" class="btn">Prendre Rendez-vous</a>
+            <!-- Bouton centré sous les services -->
+            <div class="cta-section">
+                <a href="rdv.html" class="btn btn-large">Réserver une séance photo</a>
+            </div>
         </section>
     </main>
 
