--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@
     </header>
 
     <main>
-        <!-- Section d'accueil principale -->
+        <!-- Section d'accueil -->
         <section class="hero">
             <h2>Bienvenue chez L’Objectif de Gabriel</h2>
             <p>Photographe passionné, je capture vos moments uniques avec émotion et authenticité.</p>
         </section>
 
-        <!-- Section services principaux -->
+        <!-- Section services -->
         <section class="services">
             <h2>Mes Services</h2>
             <p>Découvrez mes prestations adaptées à vos besoins.</p>
-            
             <div class="services-grid">
                 <a href="mariage.html" class="service-btn">
                     <div class="service-icon">💍</div>
@@ -53,19 +52,21 @@
                     <h3>Shooting Publicitaire</h3>
                     <p>Images impactantes pour vos projets professionnels.</p>
                 </a>
+                <a href="cliches-favoris.html" class="service-btn">
+                    <div class="service-icon">⭐</div>
+                    <h3>Mes Clichés Favoris</h3>
+                    <p>Découvrez une sélection de mes plus belles réalisations.</p>
+                </a>
             </div>
 
-            <!-- Bouton centré sous les services -->
-            <div class="cta-section">
-                <a href="rdv.html" class="btn btn-large">Réserver une séance photo</a>
+            <div class="cta-below">
+                <a href="rdv.html" class="btn">Réserver une séance photo</a>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+        <p>&copy; 2025 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
