--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     </header>
 
     <main>
-        <!-- Section d'accueil -->
+        <!-- SECTION HERO -->
         <section class="hero">
             <h2>Bienvenue chez L’Objectif de Gabriel</h2>
             <p>Photographe passionné, je capture vos moments uniques avec émotion et authenticité.</p>
+            <a href="rdv.html" class="btn">Réserver une séance photo</a>
         </section>
 
-        <!-- Section services -->
+        <!-- SECTION SERVICES -->
         <section class="services">
             <h2>Mes Services</h2>
             <p>Découvrez mes prestations adaptées à vos besoins.</p>
@@ -52,21 +53,34 @@
                     <h3>Shooting Publicitaire</h3>
                     <p>Images impactantes pour vos projets professionnels.</p>
                 </a>
-                <a href="cliches-favoris.html" class="service-btn">
-                    <div class="service-icon">⭐</div>
+            </div>
+
+            <!-- BOUTON MES CLICHÉS FAVORIS -->
+            <div class="services-grid" style="margin-top: 2rem;">
+                <a href="cliches-favoris.html" class="service-btn favoris">
+                    <div class="service-icon">🌟</div>
                     <h3>Mes Clichés Favoris</h3>
-                    <p>Découvrez une sélection de mes plus belles réalisations.</p>
+                    <p>Découvrez ma sélection de photos préférées.</p>
                 </a>
             </div>
 
-            <div class="cta-below">
+            <!-- BOUTON RÉSERVER -->
+            <div style="margin-top: 3rem;">
                 <a href="rdv.html" class="btn">Réserver une séance photo</a>
             </div>
+        </section>
+
+        <!-- SECTION CTA -->
+        <section class="cta-section">
+            <h2>Envie de réserver votre séance photo ?</h2>
+            <a href="rdv.html" class="btn">Prendre Rendez-vous</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 L'Objectif de Gabriel. Tous droits réservés.</p>
+        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
