--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             <h2>Contactez-moi</h2>
             <p>Remplissez le formulaire ci-dessous pour discuter de votre projet photo. Tous les champs avec * sont obligatoires.</p>
 
-        <form id="contactForm" action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form">
+<form action="https://formspree.io/f/xrbyoeyz" method="POST" class="contact-form">
     <input type="text" name="nom" placeholder="Votre nom" required>
     <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required>
     <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required>
