--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <input type="text" name="nom" placeholder="Votre nom" required>
     <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required>
     <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required>
-    <input type="email" name="email" placeholder="Votre email" required>
+    <input type="email" name="email" placeholder="Votre email" optionel>
 
     <label>Sélectionnez les styles de photo qui vous intéressent :</label>
     <div class="checkboxes">
@@ -41,7 +41,7 @@
         <label class="checkbox-label"><input type="checkbox" name="styles[]" value="Événement"> 🎊 Événement</label>
     </div>
 
-    <textarea name="message" placeholder="Dites-nous plus sur votre projet (budget, date approximative, idées spécifiques)..." rows="5" required></textarea>
+    <textarea name="message" placeholder="Dites-nous plus sur votre projet (budget, date approximative, idées spécifiques)..." rows="5" optionel></textarea>
 
     <label>Notez votre intérêt pour nos services :</label>
     <div class="star-rating">
