--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
         <label class="checkbox-label"><input type="checkbox" name="styles[]" value="Mariage"> 💒 Mariage</label>
         <label class="checkbox-label"><input type="checkbox" name="styles[]" value="Événement"> 🎊 Événement</label>
     </div>
+<p class="checkbox-error-message">⚠️ Veuillez sélectionner au moins un style de photo.</p>
 
     <textarea name="message" placeholder="Dites-nous plus sur votre projet (budget, date approximative, idées spécifiques)..." rows="5" optionel></textarea>
 
