--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,9 @@
         <input type="radio" id="star4" name="note" value="4"><label for="star4">★</label>
         <input type="radio" id="star5" name="note" value="5"><label for="star5">★</label>
     </div>
+<p class="checkbox-error-message" style="display:none; color:#f87171; margin-top:0.5rem; font-size:0.9rem;">
+    ⚠️ Veuillez sélectionner au moins un style de photo.
+</p>
 
     <button type="submit" class="btn">Envoyer</button>
 </form>
